Lecture05 (Tuesday Jen 23) updated.

--- a/Lecture05.ipynb
+++ b/Lecture05.ipynb
@@ -285,7 +285,7 @@
     "\n",
     "### $L^2([0,1])$\n",
     "\n",
-    "This is called the el-two space of functions on the interval $[0,1]$. It includes all the continuous functions above, as well as any function that can be written as a limit of a sequence of continuous functions, using the 2-norm for computing the limit. So it includes even discontinuous functions, like piecewise continuous function whose 2-norm is finite. (e.g. like a step function.) It even includes fun\n",
+    "This is called the el-two space of functions on the interval $[0,1]$. It includes all the continuous functions above, as well as any function that can be written as a limit of a sequence of continuous functions, using the 2-norm for computing the limit. So it includes even discontinuous functions, like piecewise continuous function whose 2-norm is finite. (e.g. like a step function.) It even includes functions that might blow up mildly, like $f(t) = t^{-1/4}$.\n",
     "\n",
     "It also uses the same inner product as we defined on $C([0,1])$. \n",
     "\n",
