Lecture05 (Tuesday Jan 23) updated

--- a/Lecture05.ipynb
+++ b/Lecture05.ipynb
@@ -380,7 +380,7 @@
     "By taking limits, we can actually show that for any function in $L^2([0,1])$ that \n",
     "$$ f(t) = \\lim_{N\\rightarrow\\infty} \\sum_{n=-N}^N \\hat{f}(n) e^{2\\pi i nt},$$ where we are taking the limit as functions in the normed space $L^2([0,1])$. So we can recover the function $f$ from its Fourier coefficients. \n",
     "\n",
-    "Actually, most mathematicians worry a lot about whether this limit holds points. (Often, it does!). \n",
+    "Actually, most mathematicians worry a lot about whether this limit holds at individual points. (Often, it does!). \n",
     "\n",
     "### What about inner products?\n",
     "\n",
@@ -389,7 +389,7 @@
     "Taking inner products, we have\n",
     "$$\\langle f,g \\rangle = \\langle \\sum_{n=-N}^N \\hat{f}(n) e^{2\\pi i nt}, \\sum_{m=-N}^N \\hat{g}(m) e^{2\\pi i mt} \\rangle\n",
     "= \\sum_{m,n} \\hat{f}(n)\\overline{\\hat{g}(m)} \\langle e^{2\\pi i nt}, e^{2\\pi i mt} \\rangle = \n",
-    "\\sum_n \\hat{f}(n)\\overline{\\hat{g}(m)},$$\n",
+    "\\sum_n \\hat{f}(n)\\overline{\\hat{g}(n)},$$\n",
     "since those complex exponentials all are orthogonal to each other and we get a bunch of zeros except when $n=m$.\n",
     "But now we notice that this sum $\\sum_n \\hat{f}(n)\\overline{\\hat{g}(m)}$ is just the inner product in the sequence space $l^2(\\mathbf{Z})$, so we do have\n",
     "$$\\langle f,g \\rangle = \\langle \\hat{f},\\hat{g} \\rangle. $$\n",
