--- a/Assign2.ipynb
+++ b/Assign2.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "source": [
     "## Q4.\n",
-    "Let $v = [2, 6, −4, 2, 400, 402, −8, −6]'$ and use the Haar transform (Algorithm 6.1 in the text, or use the 8x8 matrix from class) to compute the HWT of v. There is a large jump in the values of v from v4 to v5 and from v6 to v7. Is this reflected in the difference block of the transformed data?"
+    "Let $v = [2,6,-4,2,400,402,-8,-6]'$  and use the Haar transform (Algorithm 6.1 in the text, or use the 8x8 matrix from class) to compute the HWT of v. There is a large jump in the values of v from v4 to v5 and from v6 to v7. Is this reflected in the difference block of the transformed data?"
    ]
   },
   {
