Minor corrections to Assign2

--- a/Assign2.ipynb
+++ b/Assign2.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Q3.\n",
+    "## Q3.\n",
     " Consider the filter h with only 3 non-zero coefficients $(h_0,h_1,h_2) = (1/5, 3/5, 1/5)$. \n",
     "\n",
     "-  Show that Fourier transform has absolute value $|H(\\omega)| = \\mbox{ a trig function plus a constant}.$ (Be specific.)\n",
@@ -91,7 +91,7 @@
    "metadata": {},
    "source": [
     "## Q7.\n",
-    "Compute by hand three iterations of the inverse HWT on the vector y from Question No. 8 above. Show your work at each stage.\n",
+    "Compute by hand three iterations of the inverse HWT on the vector y from Question No. 6 above. Show your work at each stage.\n",
     "\n",
     "Verify that your result is the original vector $v$ from Question 6, showing this was an inverse."
    ]
@@ -103,11 +103,11 @@
     "## Q8.\n",
     "The $Z$ transform for the Haar filters are $H(Z) = (1+Z)/2, G(Z) = (1-Z)/2$ which have roots at $-1, +1$ respectively.\n",
     "\n",
-    "Find the roots for the $Z$ transform of the Daubechies 6 filters, lowpass $H(Z) = h_0 + h_1 Z+ h_2Z + \\cdots h_5Z^5$ and highpass $G(Z) = g_0 + g_1 Z+ g_2Z + \\cdots g_5Z^5$. You likely will have to do this numerically. \n",
+    "Find the roots for the $Z$ transform of the Daubechies filters with 6 non-zero coefficents, lowpass $H(Z) = h_0 + h_1 Z+ h_2Z + \\cdots h_5Z^5$ and highpass $G(Z) = g_0 + g_1 Z+ g_2Z + \\cdots g_5Z^5$. You likely will have to do this numerically. (In Python wavetlet package, the Daubechies filter with 6 coeffcients is called db3.)\n",
     "\n",
     "Can you see any relationship between those roots?\n",
     "\n",
-    "Verify your answer by checking with Daubechies 8.\n"
+    "Verify your answer by checking with the Daubechies filter with 8 coefficients. (In Python wavelets, this is called db4.)\n"
    ]
   },
   {
@@ -123,7 +123,7 @@
     "$$ g_k = h_{n-k}, \\mbox{ for $0 \\leq k \\leq n$}.$$\n",
     "\n",
     "b) Same question, except assume the coefficients of $G$ also have alternating signs from $H$:\n",
-    "$$ g_k = (-1)^k h_{n-k}, \\mbox{ for $0 \\leq k \\leq n$}.$$\n",
+    "$$ g_k = (-1)^k h_{n-k}, \\mbox{ for } 0 \\leq k \\leq n.$$\n",
     "\n",
     "\n"
    ]
