--- a/Lecture10_code.ipynb
+++ b/Lecture10_code.ipynb
@@ -32,7 +32,9 @@
     "Thanks to Phil for pointing this out. \n",
     "\n",
     "\n",
-    "One of the links should take any student to the ucalgary login page and then to the web version of the book after they successfully login."
+    "One of the links should take any student to the ucalgary login page and then to the web version of the book after they successfully login.\n",
+    "\n",
+    "Documentation on Python wavelet toolkit is [here](https://pywavelets.readthedocs.io/en/latest/index.html)"
    ]
   },
   {
@@ -126,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Do the wavelet decon\n",
