--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "## 1D wavelet transform, on row vectors.\n",
     "\n",
-    "What is you want to act on row vectors? Well, just take the transpose of the last equation, so we get \n",
+    "What if you want to act on row vectors? Well, just take the transpose of the last equation, so we get \n",
     "$$\n",
     "\\left[\\begin{array}{ccc} \n",
     "\\cdots & v_1 & \\cdots \\\\ \n",
