Lecture 10 (from Feb 8 class)

--- a/Lecture10.ipynb
+++ b/Lecture10.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "## 1D wavelet transform, on row vectors.\n",
     "\n",
-    "What if you want to act on row vectors? Well, just take the transpose of the last equation, so we get \n",
+    "What is you want to act on row vectors? Well, just take the transpose of the last equation, so we get \n",
     "$$\n",
     "\\left[\\begin{array}{ccc} \n",
     "\\cdots & v_1 & \\cdots \\\\ \n",
@@ -186,8 +186,8 @@
     "\n",
     "I want you to  notice that there are many ways to think about, and to analyse our convolution filters.\n",
     "\n",
-    "If you have a filter with coeffcients $(h_0, h_1 h_2, \\cdots, h_n)$ you can write down its Fourier transform as $$H(\\omega) = \\sum_k h_k e^{2\\pi i \\omega)$$ or its Z-transform\n",
-    "$$H(Z) = \\sum_k h_k Z^k$ which we notice is a polynomial in (complex) variable $Z$.\n",
+    "If you have a filter with coeffcients $(h_0, h_1 h_2, \\cdots, h_n)$ you can write down its Fourier transform as $$H(\\omega) = \\sum_k h_k e^{2\\pi i \\omega}$$ or its Z-transform\n",
+    "$$H(Z) = \\sum_k h_k Z^k$$ which we notice is a polynomial in (complex) variable $Z$.\n",
     "\n",
     "The Fourier transform is just that polynomial evaluated on points on the unit circle, given by the substitution $$Z = e^{2\\pi i \\omega}.$$ So everything you want to know about the Fourier transform of the filter can be seen from this polynomial. \n",
     "\n",
