--- a/Assign3.ipynb
+++ b/Assign3.ipynb
@@ -495,6 +495,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Q7.\n",
+    "\n",
+    "Figure out how to input a black-and-white photo into your computer, and apply the filters $g$ and $h$ from Q6. Plot the result, and describe what the filters did the photo. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Fourier transforms.\n",
     "\n",
     "We have seen a lot of Fourier transforms in this class, on various spaces. Let's look at the Fourier tranform on the real line, and see how it is connected to other Fourier transforms. \n",
@@ -581,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q7.\n",
+    "## Q8.\n",
     "Repeat the above calculation, with a few interesting functions:\n",
     "- the function $f(t) = 1$ for $t \\in [-L,L]$, zero for other values. Try for a  few different values of $L$.\n",
     "- the function $f(t) = t$ for $t \\in [-l,l]$, zero for other values\n",
@@ -595,7 +604,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q8.\n",
+    "## Q9.\n",
     "\n",
     "Improve my code (above) for computng the Fourier transform on the line, by using the discrete Fast Fourier Transform. You should think about where the function is non-zero, and how you might choose values for $\\Delta_t,\\Delta_w$ and $N$, the number of samples.\n",
     "\n",
