--- a/Assign3.ipynb
+++ b/Assign3.ipynb
@@ -593,7 +593,7 @@
     "## Q8.\n",
     "Repeat the above calculation, with a few interesting functions:\n",
     "- the function $f(t) = 1$ for $t \\in [-L,L]$, zero for other values. Try for a  few different values of $L$.\n",
-    "- the function $f(t) = t$ for $t \\in [-l,l]$, zero for other values\n",
+    "- the function $f(t) = t$ for $t \\in [-1,1]$, zero for other values\n",
     "- the function $f(t) = 1 - t^2$ for $t\\in[-1,1]$ and zero otherwise.\n",
     "- the function $f(t) = \\exp(-t^2/\\sigma^2)$ for a few values of $\\sigma$. How is the width of the result related to $\\sigma$?\n",
     "\n",
